# bd_library_manager

./: .gitignore  AGENTS.md  README.md  TLDR.md  __main__.py  batch_process.py  bdlib.sh  comicvine_client.py  config.py  convert_jpeg_to_jxl.py  create_cbz.py  generate_comicinfo.py  metadata.py  pyproject.toml
.opencode/skills/: test.md
.opencode/skills/test/: skill.json
bdlib/: __init__.py  config.py  log.py  models.py
bdlib/cli/: __init__.py  dto.py  main.py
bdlib/converters/: __init__.py  cbz.py  dejpeg.py  jpeg_to_jxl.py
bdlib/converters/archive/: __init__.py  base.py  cb7.py  cbr.py  cbz.py
bdlib/converters/dejpeg/: __init__.py  fbcnn.py  protocol.py  tiled.py  waifu2x.py
bdlib/dto/: __init__.py  cli.py  comic_metadata.py
bdlib/metadata/: __init__.py  comicinfo.py  folder.py  path.py
bdlib/metadata/comicvine/: __init__.py  client.py
bdlib/plugins/: __init__.py  converter.py  general.py
bdlib/plugins/metadata/: __init__.py  comicvine.py
docs/: API.md
tests/: __init__.py  conftest.py  test_archive.py  test_cbz.py  test_comicinfo.py  test_config.py  test_dejpeg.py  test_integration.py  test_metadata.py  test_sample.py
