[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bd-library-manager"
version = "0.1.0"
description = "Comic archive preparation tools - convert images, generate metadata, create CBZ archives"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Andrea Spelgatti", email = "spelgattiandre@ourouk.be"}
]
keywords = ["comics", "cbz", "jxl", "comicinfo", "comic-vine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: MIT License",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "requests",
    "Pillow",
    "jxlpy",
    "pylibjxl",
    "numpy",
    "onnxruntime-gpu",
    "py7zr",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "numpy",
]
cbr = [
    "rarfile",
]

[project.scripts]
bdlib = "bdlib.cli.main:main"

[project.entry-points."bdlib.plugins"]
general = "bdlib.plugins.general:GeneralPlugin"
converter = "bdlib.plugins.converter:ConverterPlugin"
comicvine = "bdlib.plugins.metadata.comicvine:ComicVinePlugin"

[project.urls]
Homepage = "https://github.com/yourusername/bd_library_manager"
Repository = "https://github.com/yourusername/bd_library_manager"

[tool.setuptools.packages.find]
where = ["."]
include = ["bdlib*"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true